deploy/demo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app
  namespace: paprika-e2e
spec:
  parentRefs:
    - name: paprika
      namespace: envoy-gateway-system
  hostnames:
      - paprika-demo.benebsworth.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-app-release-demo-app-stable
          port: 80
